[package]
name = "test_os"
version = "0.1.0"
authors = ["Oliver Calder <olivercalder@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
rlibc = "1.0.0"
volatile = "0.2.6"      # Allows guaranteed writes to memory (or I/O)
spin = "0.9.0"
# miniz_oxide = { version = "0.4.4", optional = true, default-features = false, features = ["compiler_builtins", "rustc-std-workspace-alloc"] }
# miniz_oxide = { version = "0.5.0", optional = true, default-features = false }  # probably requires alloc and collections crates
miniz_oxide = "0.5.0"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"]}


x86_64 = "0.14.4"
uart_16550 = "0.2.0"        # Provides serial port interface
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"       # Provides translation of scancodes for sets 1 (IBM XT) and 2. PS/2 in qemu uses set 1
linked_list_allocator = "0.9.0"     # Provides a linked list heap allocator, also used by the fixed size block allocator

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false    # makes this no_std compatible
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33     # (0x10 << 1) | 1
test-timeout = 60               # Seconds to timeout
run-args = ["-serial", "pipe:io_pipe"]

[[test]]
name = "should_panic"
harness = false         # Do not use the test runner, run test directly

[[test]]
name = "stack_overflow"
harness = false
